--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@ Telegram
 <script type="text/javascript">
     VK.Widgets.Poll("vk_poll", {width: 300}, "252078325_14e94b7c20b3d21b2a");
 </script>
-<iframe id="fancyframe" src="http://78.155.208.241:3000/iframe/-1001051512269" onload="iframeReady()" scrolling="no" style="    width: 560px;
-    padding: 4px;
-    border: 1px solid #eaeaea;
-    min-height: 550px;"></iframe>
+<iframe id="fancyframe" src="http://78.155.208.241:3000/iframe/-1001051512269" scrolling="no" style="width: 560px; padding-top: 40px; border: 1px solid #eaeaea; min-height: 550px;"></iframe>
 </body>
 </html>
